[package]
name = "mung"
version = "0.1.0"
authors = ["Martin Algesten <martin@lookback.io>"]
edition = "2018"

[dependencies]
bson = "1.0"
log = "0.4"
mongodb = { version = "1.0", default-features=false, features = ["sync"] }
pretty_env_logger = "0.4"
structopt = "0.3"
json5 = "0.2"
serde_json = "1"
serde = "1"
rpassword = "4"
colored_json = "2"
